# Alwardas-AA

./: .dockerignore  .gitignore  AlwardasAA_Bug_Report.docx  C23 CURRICULUM.docx  Dockerfile  all_units_results.txt  bug_report.txt  curriculum_text.txt  docker-compose.yml  find_results.txt  generate_protos.bat  git_log.txt  git_log_full.txt  git_log_full_utf8.txt  git_log_utf8.txt  run_backend.bat  search_results.txt  syllabus_by_name.txt  syllabus_snippets.txt
backend/: .gitignore  Cargo.toml  Dockerfile  add_course_id_col.js  add_section_sch.js  announcements.json  backend_err.txt  backend_log.txt  backend_out.txt  backfill_codes.js  branch_subjects.txt  check_branch_sem3.js  check_cs_data.js  check_db.js  check_lesson_plan.js  check_lp_cm303.js  check_lp_cols.js  check_lp_counts.js  check_lpi_schema.js  check_null_codes.js  check_sch_cols.js  check_sch_constraints.js  check_schema.js  check_sem_val.js  check_subj_data.js  check_subj_schema.js  check_subject_ids.js  check_subjects.js  check_subjects_cols.js  check_subjects_lp.js  check_uuids.js  compare_ids.js  debug_cm303.js  debug_subjects_output.txt  debug_topics.js  find_empty_subjects.js  find_lp_os.js  get_sch_schema.js  list_cs.js  output.txt  (+15 more)
backend/.sqlx/: query-0b35af5ca0bd52656503d6e5c85c604ba28ef2dfdf3618d9ca9a83acbb07ef49.json  query-33f8e724cd27c08463dff16ae8771bbb2d456fab9228eb0b17c1cdb064914d19.json  query-3733ea3819dfd0c65eab53d4af02477b64c598b4e5bec50df13a1aa38719d4c0.json  query-3d247c4ebad4f49139fbbfb601c4eff5779e5b28980531a6e7836a95fbc1da85.json  (+20 more)
backend/src/: main.rs  main_backup.rs  models.rs  (+1 more)
(+803 files in other folders)
