[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "chrono", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "util"] }
windows-sys = "0.52.0"
bcrypt = "0.17.1"
tonic = "0.12"
prost = "0.13"
tower = { version = "0.4", features = ["full", "util"] }
tower-service = "0.3"
hyper = "1.0"
hyper-util = "0.1"
http-body-util = "0.1"
prost-types = "0.14.3"
rand = "0.9.2"
redis = { version = "0.24", features = ["tokio-comp", "tls", "tokio-native-tls-comp"] }

[build-dependencies]
tonic-build = "0.12"
